--- a/views/anleintung.twig
+++ b/views/anleintung.twig
@@ -1,3 +1,11 @@
+{% extends "base.twig" %}
+
+{% block title %}
+    anleitung
+{% endblock %}
+
+{% block content %}
+
 <h1>Daten als Proviant</h1>
 <div>Die siri-sonde braucht Daten. Wenn du Bilder, Töne oder Filme auf dem 30c3 findest, dann bringe eine Kopie zur siri-sonde.</div>
 
@@ -14,5 +22,4 @@ Dann werden die Dateien sofort abgesaugt.</div>
 <h1>irgenwas (un)klar</h1>
 <div>Komm einfach bei der c-base crew vorbei und frag wenn Dir was unklar ist.</div>
 
-
-
+{% endblock %}
