--- a/views/base.twig
+++ b/views/base.twig
@@ -22,6 +22,9 @@
                     <li>
                         <a href="/siri-sonde">u:ber siri</a>
                     </li>
+                    <li>
+                        <a href="/anleitung">anleitung</a>
+                    </li>
                 </ul>
             </div>
         </div>
