--- a/views/index.twig
+++ b/views/index.twig
@@ -55,7 +55,7 @@
                         <h3 class="panel-title">siri {{ key }}</h3>
                     </div>
                     <div class="panel-body">
-                        {{ info }}
+                        {{ info|markdown }}
                     </div>
                 </div>
             {% else %}
